--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.2",
     "joi": "^18.0.1",
     "joi-objectid": "^4.0.2",
+    "joi-password-complexity": "^5.2.0",
     "lodash": "^4.17.21",
     "mongoose": "^8.18.0",
     "nodemon": "^3.1.10"
