--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^4.16.2",
     "joi": "^18.0.1",
     "joi-objectid": "^4.0.2",
