--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^6.0.0",
     "config": "^4.1.1",
     "express": "^4.16.2",
+    "express-async-errors": "^3.1.1",
     "joi": "^18.0.1",
     "joi-objectid": "^4.0.2",
     "joi-password-complexity": "^5.2.0",
