--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^8.18.0",
     "nodemon": "^3.1.10",
-    "winston": "^3.18.3"
+    "winston": "^3.18.3",
+    "winston-mongodb": "^7.0.1"
   }
 }
